--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <!--css file-->
-    <link rel="stylesheet" href="/Bootstrap (TinDog Website)/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -86,7 +86,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <img
               class="title-image"
-              src="/Bootstrap (TinDog Website)/images/cdog.png"
+              src="/images/cdog.png"
               alt="dog-image"
             />
           </div>
@@ -134,7 +134,7 @@
             </h2>
             <img
               class="testimonials-image"
-              src="/Bootstrap (TinDog Website)/images/test.jpg"
+              src="/images/test.jpg"
               alt="dog"
             />
             <em>Pebbles, New York</em>
@@ -146,7 +146,7 @@
             </h2>
             <img
               class="testimonials-image"
-              src="/Bootstrap (TinDog Website)/images/test2.jpg"
+              src="/images/test2.jpg"
               alt="dog"
             />
             <em>Beverly, Illindins</em>
@@ -178,23 +178,23 @@
     <section id="press">
       <img
         class="press-logo"
-        src="/Bootstrap (TinDog Website)/images/adidas.png"
+        src="/images/adidas.png"
         alt=""
       />
 
       <img
         class="press-logo"
-        src="/Bootstrap (TinDog Website)/images/mcdonalds.png"
+        src="/images/mcdonalds.png"
         alt=""
       />
       <img
         class="press-logo"
-        src="/Bootstrap (TinDog Website)/images/slack.png"
+        src="/images/slack.png"
         alt=""
       />
       <img
         class="press-logo"
-        src="/Bootstrap (TinDog Website)/images/photos.png"
+        src="/images/photos.png"
         alt=""
       />
     </section>
